--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
-<h1>
-    <strong>Site do Defendi</strong>
-</h1>
-<p>
-    Página inicial temporária, novidades em breve…
-</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Coming Soon</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+    <h1>COMING SOON</h1>
+    <p>My website is under construction. Stay tuned for new updates!</p>
+</body>
+
+</html>
